--- a/dynamic/templates/login.html
+++ b/dynamic/templates/login.html
@@ -8,7 +8,7 @@
     <a href="login.html"></a>
     <a href="register.html"></a>
 </head>
-<body style="background-image: linear-gradient(to right, #01012b, #02006d)"">
+<body>
     <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
         <div class="card rounded" style="width: 600px; color: aliceblue; border: none;">
             <div class="card-body" style="background-color: #030352;">
@@ -16,38 +16,41 @@
                 <form method="POST" action="{{ url_for('login') }}">
                     {{ form.hidden_tag() }}
                     <div class="form-group">
-                        {{ form.email.label(class="form-control-label") }}
-                        {{ form.email(class="form-control form control-lg") }}
-                        {% if form.first_name.errors %}
-                           {% for error in form.email.errors %}
-                                <div class="alert alert-danger">{{ error }}</div>
-                           {% endfor %}
-                        {% endif %}
+                      {{ form.email.label(class="form-control-label") }}
+                      {% if form.email.errors %}
+                          {{ form.email(class="form-control form-control-lg is-invalid") }}
+                          <div class="invalid-feedback">
+                              {% for error in form.email.errors %}
+                                  <span>{{ error }}</span>
+                              {% endfor %}
+                          </div>
+                      {% else %}
+                          {{ form.email(class="form-control form-control-lg") }}
+                      {% endif %}
                     </div>
                     <div class="form-group">
-                        {{ form.password.label(class="form-control-label") }}
-                        {% if form.password.errors %}
+                      {{ form.password.label(class="form-control-label") }}
+                      {% if form.password.errors %}
                           {{ form.password(class="form-control form-control-lg is-invalid") }}
                           <div class="invalid-feedback">
-                            {% for error in form.password.errors %}
-                              <span>{{ error }}</span>
-                            {% endfor %}
+                              {% for error in form.password.errors %}
+                                  <span>{{ error }}</span>
+                              {% endfor %}
                           </div>
-                        {% else %}
+                      {% else %}
                           {{ form.password(class="form-control form-control-lg") }}
-                        {% endif %}
-                      </div>
-                      <div class="form-check">
-                        {{ form.remember(class="form-check-input") }}
-                        {{ form.remember.label(class="form-check-label") }}
-                      </div>
-                      <div class="form-group">
-                        {{ form.submit(class="btn btn-outline-info") }}
-                      </div>
-                    </form>
-                    <div class="form-group">
-                        {{ form.submit(class="btn btn-outline-info") }}
-                    </div>
+                      {% endif %}
+                   </div>
+                   <div class="form-check">
+                    {{ form.remember(class="form-check-input") }}
+                    {{ form.remember.label(class="form-check-label") }}
+                   </div>
+                  <div class="form-group">
+                    {{ form.submit(class="btn btn-outline-info") }}
+                  </div>
+                  <small class="text-muted ml-2">
+                    <a href="#">Forgot Password?</a>
+                  </small> 
                 </form>
                 <div class="border-top pt-3" style="text-align: center;">
                     <small class="text-muted">
