--- a/dynamic/templates/register.html
+++ b/dynamic/templates/register.html
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <a href="register.html"></a>
-    <a href="login.html"></a>
-</head>
-<body style="background-image: linear-gradient(to right, #01012b, #02006d)"">
+{% extends "layout.html" %}
+{% block content %}
     <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
         <div class="card rounded" style="width: 600px; color: aliceblue; border: none;">
             <div class="card-body" style="background-color: #030352;">
@@ -19,135 +10,213 @@
                     {{ form.hidden_tag() }}
                     <div class="form-group">
                         {{ form.first_name.label(class="form-control-label") }}
-                        {{ form.first_name(class="form-control form control-lg") }}
+                        
                         {% if form.first_name.errors %}
-                           {% for error in form.first_name.errors %}
-                                <div class="alert alert-danger">{{ error }}</div>
-                           {% endfor %}
+                            {{ form.first_name(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.first_name.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.first_name(class="form-control form-control-lg") }}
                         {% endif %}
                     </div>
                     <div class="form-group">
                         {{ form.last_name.label(class="form-control-label") }}
-                        {{ form.last_name(class="form-control form-control-lg") }}
-                        {% if form.first_name.errors %}
-                           {% for error in form.last_name.errors %}
-                                <div class="alert alert-danger">{{ error }}</div>
-                           {% endfor %}
+                        
+                        {% if form.last_name.errors %}
+                            {{ form.last_name(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.last_name.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.last_name(class="form-control form-control-lg") }}
                         {% endif %}
                     </div>
                     <div class="form-group">
                         {{ form.email.label(class="form-control-label") }}
-                        {{ form.email(class="form-control form-control-lg") }}
+                        
                         {% if form.email.errors %}
-                           {% for error in form.email.errors %}
-                                <div class="alert alert-danger">{{ error }}</div>
-                           {% endfor %}
+                            {{ form.email(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.email.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.email(class="form-control form-control-lg") }}
                         {% endif %}
                     </div>
                     <div class="form-group">
                         {{ form.phone.label(class="form-control-label") }}
-                        {{ form.phone(class="form-control-lg") }}
+                        
                         {% if form.phone.errors %}
-                           {% for error in phone.errors %}
-                                <div class="alert alert-danger">{{ error }}</div>
-                           {% endfor %}
+                            {{ form.phone(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.phone.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.phone(class="form-control form-control-lg") }}
                         {% endif %}
                     </div>
                     <div class="form-group">
                         {{ form.password.label(class="form-control-label") }}
-                        {{ form.password(class="form-control form-control-lg") }}
+                        
                         {% if form.password.errors %}
-                           {% for error in form.password.errors %}
-                                <div class="alert alert-danger">{{ error }}</div>
-                           {% endfor %}
+                            {{ form.password(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.password.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.password(class="form-control form-control-lg") }}
                         {% endif %}
                     </div>
                     <div class="form-group">
-                        {{ form.comfirm_password.label(class="form-control-label") }}
-                        {{ form.confirm_password(class="form-control form-control-lg") }}
+                        {{ form.confirm_password.label(class="form-control-label") }}
+                        
                         {% if form.confirm_password.errors %}
-                           {% for error in form.confirm_password.errors %}
-                                <div class="alert alert-danger">{{ error }}</div>
-                           {% endfor %}
+                            {{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.confirm_password.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.confirm(class="form-control form-control-lg") }}
                         {% endif %}
-                    </div>
-                    <div class="form-group">
-                        {{ form.name.label(class="form-control-label") }}
-                        {{ form.name(class="form-control form-control-lg") }}
-                        {% if form.name.errors %}
-                           {% for error in form.name.errors %}
-                                <div class="alert alert-danger">{{ error }}</div>
-                           {% endfor %}
-                        {% endif %}
-                    </div>
-                    <div class="form-group">
-                        {{ form.description.label(class="form-control-label") }}
-                        {{ form.description(class="form-control form-control-lg") }}
-                        {% if form.description.errors %}
-                           {% for error in form.description.errors %}
-                                <div class="alert alert-danger">{{ error }}</div>
-                           {% endfor %}
-                        {% endif %}
-                    </div>
-                    <div class="form-group">
-                        {{ form.address.label(class="form-control-label") }}
-                        {{ form.address(class="form-control form-control-lg") }}
-                        {% if form.address.errors %}
-                           {% for error in form.address.errors %}
-                                <div class="alert alert-danger">{{ error }}</div>
-                           {% endfor %}
-                        {% endif %}
-                    </div>
-                    <div class="form-group">
-                        {{ form.city.label(class="form-control-label") }}
-                        {{ form.city(class="form-control form-control-lg") }}
-                        {% if form.city.errors %}
-                           {% for error in form.city.errors %}
-                                <div class="alert alert-danger">{{ error }}</div>
-                           {% endfor %}
-                        {% endif %}
-                    </div>
-                    <div class="form-group">
-                        {{ form.state.label(class="form-control-label") }}
-                        {{ form.state(class="form-control form-control-lg") }}
-                        {% if form.state.errors %}
-                           {% for error in form.state.errors %}
-                                <div class="alert alert-danger">{{ error }}</div>
-                           {% endfor %}
-                        {% endif %}
-                    </div>
-                    <div class="form-group">
-                        {{ form.country.label(class="form-control-label") }}
-                        {{ form.country(class="form-control form-control-lg") }}
-                        {% if form.country.errors %}
-                           {% for error in form.country.errors %}
-                                <div class="alert alert-danger">{{ error }}</div>
-                           {% endfor %}
-                        {% endif %}
-                    </div>
-                    <div class="form-group">
-                        {{ form.zip_code.label(class="form-control-label") }}
-                        {{ form.zip_code(class="form-control form-control-lg") }}
-                        {% if form.zip_code.errors %}
-                           {% for error in form.zip_code.errors %}
-                                <div class="alert alert-danger">{{ error }}</div>
-                           {% endfor %}
-                        {% endif %}
-                    </div>
-                    <div class="form-group">
-                        {{ form.services.label(class="form-control-label") }}
-                        {{ form.services(class="form-control form-control-lg") }}
-                        {% if form.services.errors %}
-                           {% for error in form.services.errors %}
-                                <div class="alert alert-danger">{{ error }}</div>
-                           {% endfor %}
-                        {% endif %}
-                    </div>
-                    <div class="form-group">
-                        {{ form.submit(class="btn btn-outline-info") }}
                     </div>
                 </form>
             </div>
+            <p class="border-top pt-3" style="color: black;"><b>To Complete SignUp, Register a Business!</b></p>
+            <div class="card rounded" style="width: 600px; color: aliceblue; border: none;">
+                <div class="card-body" style="background-color: #030352;">
+                    <form>
+                        <div class="form-group">
+                            {{ form.name.label(class="form-control-label") }}
+                            
+                            {% if form.name.errors %}
+                                {{ form.name(class="form-control form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.name.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.name(class="form-control form-control-lg") }}
+                            {% endif %}
+                        </div>
+                        <div class="form-group">
+                            {{ form.description.label(class="form-control-label") }}
+                            
+                            {% if form.description.errors %}
+                                {{ form.description(class="form-control form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.description.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.description(class="form-control form-control-lg") }}
+                            {% endif %}
+                        </div>
+                        <div class="form-group">
+                            {{ form.address.label(class="form-control-label") }}
+                            
+                            {% if form.address.errors %}
+                                {{ form.address(class="form-control form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.address.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.address(class="form-control form-control-lg") }}
+                            {% endif %}
+                        </div>
+                        <div class="form-group">
+                            {{ form.city.label(class="form-control-label") }}
+                            
+                            {% if form.city.errors %}
+                                {{ form.city(class="form-control form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.city.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.city(class="form-control form-control-lg") }}
+                            {% endif %}
+                        </div>
+                        <div class="form-group">
+                            {{ form.state.label(class="form-control-label") }}
+                            
+                            {% if form.state.errors %}
+                                {{ form.state(class="form-control form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.state.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.state(class="form-control form-control-lg") }}
+                            {% endif %}
+                        </div>
+                        <div class="form-group">
+                            {{ form.country.label(class="form-control-label") }}
+                            
+                            {% if form.country.errors %}
+                                {{ form.country(class="form-control form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.country.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.country(class="form-control form-control-lg") }}
+                            {% endif %}
+                        </div>
+                        <div class="form-group">
+                            {{ form.zip_code.label(class="form-control-label") }}
+                            
+                            {% if form.zip_code.errors %}
+                                {{ form.zip_code(class="form-control form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.zip_code.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.zip_code(class="form-control form-control-lg") }}
+                            {% endif %}
+                        </div>
+                        <div class="form-group">
+                            {{ form.services.label(class="form-control-label") }}
+                            
+                            {% if form.services.errors %}
+                                {{ form.services(class="form-control form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.services.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.services(class="form-control form-control-lg") }}
+                            {% endif %}
+                        </div>
+                        <div class="form-group">
+                            {{ form.submit(class="btn btn-outline-info") }}
+                        </div>
+                    </form>
+                </div>
+            </div>
+
             <div class="border-top pt-3" style="text-align: center;">
                 <small class="text-muted ml-5">
                     Already Have an Account? <a class="ml-2" href="{{ url_for('login') }}">SignIn</a>
@@ -155,5 +224,4 @@
             </div>
         </div>
     </div>
-</body>
-</html>
+{% endblock content %}
