--- a/dynamic/templates/login.html
+++ b/dynamic/templates/login.html
@@ -50,3 +50,10 @@
         </small>
     </div>
 {% endblock content %}
+{% block sidebar %}
+    <div class="content-section">
+        <h3>WELCOME!</h3>
+	</br>
+	<h5><p>Sign in to view your account and register more Businesses</p></h5>
+    </div>
+{% endblock sidebar %}
