--- a/dynamic/templates/account.html
+++ b/dynamic/templates/account.html
@@ -2,11 +2,11 @@
 {% block content %}
 <div class="content-section">
 	<div class="media">
-			<img class="rounded-circle account-img" src="{{ profile_pic }}">
-		<div class="media-body">
-				<h2 class="account-heading">{{ current_user.first_name }} {{ current_user.last_name}}</h2>
-				<p class="text-secondary">{{ current_user.email }}</p>
-    	</div>
+	    <img class="rounded-circle account-img" src="{{ profile_pic }}">
+	    <div class="media-body">
+	        <h2 class="account-heading">{{ current_user.first_name }} {{ current_user.last_name}}</h2>
+	        <p class="text-secondary">{{ current_user.email }}</p>
+    	    </div>
   	</div>
   	<!-- FORM HERE -->
         <form method="POST" action="" enctype="multipart/form-data">
@@ -69,15 +69,15 @@
                         {{ form.phone(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
-				<div class="form-group">
+		<div class="form-group">
                     {{ form.profile_pic.label }}
-					{{ form.profile_pic(class="form-control-file") }}
-					{% if form.profile_pic.errors %}
-						{% for error in form.profile_pic.errors %}
-                        	<span class="text-danger">{{ error }}</span></br>
+		    {{ form.profile_pic(class="form-control-file") }}
+		    {% if form.profile_pic.errors %}
+			{% for error in form.profile_pic.errors %}
+                            <span class="text-danger">{{ error }}</span></br>
                         {% endfor %}
-					{% endif %}
-				</div>
+		    {% endif %}
+		</div>
             </fieldset>
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
@@ -85,3 +85,20 @@
         </form>
 </div>
 {% endblock content %}
+{% block sidebar %}
+    <div class="content-section">
+        <h3>Your Businesses</h3>
+        <p class='text-muted'>To edit business details click on the business.
+            <ul class="list-group list-group-flush">
+		{% for business in businesses %}
+		<li class="list-group-item list-group-item-action d-flex justify-content-center">
+		    <a href="{{ url_for('business', business_id=business.id) }}" class="text-center no-underline">
+                        {{ business.name }}
+		    </a>
+		</li>
+		{% endfor %}
+            </ul>
+        </p>
+	<a href="{{ url_for('register_business') }}">Register a New Business</a>
+    </div>
+{% endblock sidebar %}
