Created home page

--- a/dynamic/templates/layout.html
+++ b/dynamic/templates/layout.html
@@ -18,9 +18,11 @@
 </head>
 <body>
     <header class="site-header">
-      <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+      <nav class="navbar navbar-expand-md bg-steel fixed-top" style="background-color: #0A1172;">
         <div class="container">
-          <a class="navbar-brand mr-4" href="/">LookUP</a>
+          <a class="navbar-brand mr-4" href="/">
+		<img class="logo-img" src="{{ image_url }}">
+	  </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
