small edits on route and template

--- a/dynamic/templates/home.html
+++ b/dynamic/templates/home.html
@@ -36,14 +36,16 @@
                 <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
                 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
               {% else %}
-                <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-                <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+                <a class="nav-item nav-link" href="{{ url_for('login') }}">Business User?-Login</a>
+                <a class="nav-item nav-link" href="{{ url_for('register') }}">Register as Business User</a>
               {% endif %}
             </div>
           </div>
         </div>
       </nav>
     </header>
+
+
     <main role="main" class="container">
         <div class="row">
             <div class="col-md-12">
@@ -75,6 +77,8 @@
 	    </div>
         </div>
     </main>
+
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
